k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: campus-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: campus-frontend
  template:
    metadata:
      labels:
        app: campus-frontend
    spec:
      containers:
      - name: campus-frontend
        image: dist_sys_app-main-campus-frontend 
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: campus-frontend-service
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: campus-frontend
